force-app/main/default/objects/Price_Batch__c/Price_Batch__c.object-meta.xml
<CustomObject>
    <label>Lote de Precios</label>
    <nameField>
        <displayFormat>LPR-{00000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lotes de Precios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>