force-app/main/default/objects/Price_Batch__c/fields/Converted__c.field-meta.xml
<CustomField>
    <fullName>Converted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convertido</label>
    <type>Checkbox</type>
</CustomField>