force-app/main/default/objects/Price_Batch__c/fields/External_Shipping_GTQ__c.field-meta.xml
<CustomField>
    <fullName>External_Shipping_GTQ__c</fullName>
    <label>Flete Externo GTQ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>