force-app/main/default/objects/Price_Batch__c/fields/Taxes__c.field-meta.xml
<CustomField>
    <fullName>Taxes__c</fullName>
    <label>Impuestos Aduanales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>