force-app/main/default/objects/Price_Batch__c/fields/Total_GTQ__c.field-meta.xml
<CustomField>
    <fullName>Total_GTQ__c</fullName>
    <label>Total GTQ</label>
    <summarizedField>Price_Batch_Line__c.Unit_Price_GTQ__c</summarizedField>
    <summaryForeignKey>Price_Batch_Line__c.Price_Batch__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>