force-app/main/default/objects/Price_Batch__c/validationRules/Negative_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR( Dollar_Cost__c &lt; 0, External_Shipping_GTQ__c &lt; 0, External_Shipping_USD__c &lt; 0, Internal_Shipping__c &lt; 0, Taxes__c &lt; 0)</errorConditionFormula>
    <errorMessage>No es posible ingresar cantidades negativas.</errorMessage>
</ValidationRule>