force-app/main/default/objects/Price_Batch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Converted__c</columns>
    <columns>Dollar_Cost__c</columns>
    <columns>Internal_Shipping__c</columns>
    <columns>External_Shipping_GTQ__c</columns>
    <columns>External_Shipping_USD__c</columns>
    <columns>Total_GTQ__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>